Added external links section

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -62,44 +62,22 @@
 
 ## 💡 Investment Thesis
 
-<div className="nx-mt-8 nx-rounded-xl nx-bg-gradient-to-br nx-from-indigo-50 nx-via-purple-50 nx-to-pink-50 nx-border nx-border-indigo-200 nx-p-8 nx-shadow-lg dark:nx-from-indigo-900/30 dark:nx-via-purple-900/30 dark:nx-to-pink-900/30 dark:nx-border-indigo-700">
-  <div className="nx-flex nx-items-center nx-mb-6">
-    <div className="nx-text-3xl nx-mr-4">🎯</div>
-    <h3 className="nx-text-2xl nx-font-bold nx-text-indigo-900 dark:nx-text-indigo-100">Why Market Fit is Winning</h3>
-  </div>
-  
-  <div className="nx-grid nx-grid-cols-1 md:nx-grid-cols-3 nx-gap-8">
-    <div className="nx-bg-white/80 dark:nx-bg-gray-800/50 nx-p-6 nx-rounded-xl nx-shadow-md nx-text-center nx-transition-all nx-duration-300 hover:nx-shadow-lg hover:nx-scale-105">
-      <div className="nx-bg-gradient-to-br nx-from-blue-100 nx-to-indigo-100 dark:nx-from-blue-900/50 dark:nx-to-indigo-900/50 nx-w-16 nx-h-16 nx-rounded-full nx-flex nx-items-center nx-justify-center nx-mx-auto nx-mb-4">
-        <div className="nx-text-3xl">🤖</div>
-      </div>
-      <h4 className="nx-text-lg nx-font-bold nx-text-indigo-800 dark:nx-text-indigo-200 nx-mb-3">AI-First Platform</h4>
-      <p className="nx-text-sm nx-text-indigo-700 dark:nx-text-indigo-300 nx-leading-relaxed">
-        Revolutionary AI agents that work 24/7, delivering 35% better conversion rates than traditional sales tools.
-      </p>
-    </div>
-    
-    <div className="nx-bg-white/80 dark:nx-bg-gray-800/50 nx-p-6 nx-rounded-xl nx-shadow-md nx-text-center nx-transition-all nx-duration-300 hover:nx-shadow-lg hover:nx-scale-105">
-      <div className="nx-bg-gradient-to-br nx-from-green-100 nx-to-emerald-100 dark:nx-from-green-900/50 dark:nx-to-emerald-900/50 nx-w-16 nx-h-16 nx-rounded-full nx-flex nx-items-center nx-justify-center nx-mx-auto nx-mb-4">
-        <div className="nx-text-3xl">📈</div>
-      </div>
-      <h4 className="nx-text-lg nx-font-bold nx-text-indigo-800 dark:nx-text-indigo-200 nx-mb-3">Proven Product-Market Fit</h4>
-      <p className="nx-text-sm nx-text-indigo-700 dark:nx-text-indigo-300 nx-leading-relaxed">
-        Strong unit economics with 5.3x LTV/CAC ratio and expanding into enterprise segment successfully.
-      </p>
-    </div>
-    
-    <div className="nx-bg-white/80 dark:nx-bg-gray-800/50 nx-p-6 nx-rounded-xl nx-shadow-md nx-text-center nx-transition-all nx-duration-300 hover:nx-shadow-lg hover:nx-scale-105">
-      <div className="nx-bg-gradient-to-br nx-from-purple-100 nx-to-pink-100 dark:nx-from-purple-900/50 dark:nx-to-pink-900/50 nx-w-16 nx-h-16 nx-rounded-full nx-flex nx-items-center nx-justify-center nx-mx-auto nx-mb-4">
-        <div className="nx-text-3xl">🚀</div>
-      </div>
-      <h4 className="nx-text-lg nx-font-bold nx-text-indigo-800 dark:nx-text-indigo-200 nx-mb-3">Massive Market Opportunity</h4>
-      <p className="nx-text-sm nx-text-indigo-700 dark:nx-text-indigo-300 nx-leading-relaxed">
-        $240B sales automation market with clear path to $100M+ ARR through geographic and vertical expansion.
-      </p>
-    </div>
-  </div>
-</div>
+### 🎯 Why Market Fit is Winning
+
+#### 🤖 AI-First Platform
+- **Innovation**: Revolutionary AI agents that work 24/7
+- **Performance**: 35% better conversion rates than traditional sales tools
+- **Advantage**: First-mover advantage in AI-native sales automation
+
+#### 📈 Proven Product-Market Fit
+- **Unit Economics**: Strong 5.3x LTV/CAC ratio
+- **Market Expansion**: Successfully expanding into enterprise segment
+- **Validation**: Clear product-market fit with accelerating growth
+
+#### 🚀 Massive Market Opportunity
+- **Market Size**: $240B sales automation market
+- **Growth Path**: Clear route to $100M+ ARR
+- **Expansion Strategy**: Geographic and vertical market expansion
 
 
 
@@ -107,87 +85,55 @@
 
 ## 📈 Market Position & Traction
 
-<div className="nx-grid nx-grid-cols-1 md:nx-grid-cols-2 nx-gap-6 nx-mt-6">
-  <div className="nx-bg-white dark:nx-bg-gray-800 nx-p-6 nx-rounded-lg nx-shadow-sm nx-border nx-border-gray-100 dark:nx-border-gray-700">
-    <h3 className="nx-text-lg nx-font-semibold nx-mb-4">🏆 Competitive Advantages</h3>
-    <div className="nx-space-y-3">
-      <div className="nx-flex nx-items-center nx-space-x-3">
-        <div className="nx-w-2 nx-h-2 nx-bg-green-500 nx-rounded-full"></div>
-        <span className="nx-text-sm">First AI-native sales automation platform</span>
-      </div>
-      <div className="nx-flex nx-items-center nx-space-x-3">
-        <div className="nx-w-2 nx-h-2 nx-bg-green-500 nx-rounded-full"></div>
-        <span className="nx-text-sm">SOC 2 compliance & enterprise security</span>
-      </div>
-      <div className="nx-flex nx-items-center nx-space-x-3">
-        <div className="nx-w-2 nx-h-2 nx-bg-green-500 nx-rounded-full"></div>
-        <span className="nx-text-sm">99.95% uptime with global infrastructure</span>
-      </div>
-      <div className="nx-flex nx-items-center nx-space-x-3">
-        <div className="nx-w-2 nx-h-2 nx-bg-green-500 nx-rounded-full"></div>
-        <span className="nx-text-sm">Complete CRM ecosystem integrations</span>
-      </div>
-</div>
-  </div>
-  
-  <div className="nx-bg-white dark:nx-bg-gray-800 nx-p-6 nx-rounded-lg nx-shadow-sm nx-border nx-border-gray-100 dark:nx-border-gray-700">
-    <h3 className="nx-text-lg nx-font-semibold nx-mb-4">📅 Recent Milestones</h3>
-    <div className="nx-space-y-3">
-      <div className="nx-text-sm">
-        <div className="nx-font-semibold nx-text-green-600">December 15, 2024</div>
-        <div>✅ Closed $12M Series A (Andreessen Horowitz)</div>
-      </div>
-      <div className="nx-text-sm">
-        <div className="nx-font-semibold nx-text-blue-600">December 1, 2024</div>
-        <div>🚀 Mobile app launch (4.6/5 rating)</div>
-      </div>
-      <div className="nx-text-sm">
-        <div className="nx-font-semibold nx-text-purple-600">November 12, 2024</div>
-        <div>🔗 Salesforce integration (99.8% sync accuracy)</div>
-      </div>
-      <div className="nx-text-sm">
-        <div className="nx-font-semibold nx-text-orange-600">October 28, 2024</div>
-        <div>🤖 Advanced AI workflows (+35% conversions)</div>
-      </div>
-    </div>
-  </div>
-</div>
+### 🏆 Competitive Advantages
+
+#### Platform Leadership
+- **First AI-native sales automation platform**: Revolutionary technology approach
+- **SOC 2 compliance & enterprise security**: Enterprise-grade security standards
+- **99.95% uptime with global infrastructure**: Industry-leading reliability
+- **Complete CRM ecosystem integrations**: Seamless workflow integration
+
+### 📅 Recent Milestones
+
+#### December 2024
+- **December 15, 2024**: ✅ Closed $12M Series A (Andreessen Horowitz)
+- **December 1, 2024**: 🚀 Mobile app launch (4.6/5 rating)
+
+#### Q4 2024 Product Releases
+- **November 12, 2024**: 🔗 Salesforce integration (99.8% sync accuracy)
+- **October 28, 2024**: 🤖 Advanced AI workflows (+35% conversions)
 
 ## 🎯 Next 90 Days Focus
 
-<div className="nx-mt-6 nx-bg-gray-50 dark:nx-bg-gray-900/20 nx-p-6 nx-rounded-lg nx-border nx-border-gray-200 dark:nx-border-gray-800">
-  <div className="nx-grid nx-grid-cols-1 md:nx-grid-cols-3 nx-gap-6">
-    <div>
-      <h4 className="nx-font-semibold nx-text-gray-900 dark:nx-text-gray-100 nx-mb-3">📈 Growth</h4>
-      <ul className="nx-text-sm nx-text-gray-700 dark:nx-text-gray-300 nx-space-y-1">
-        <li>• Reach $3.2M ARR (+33%)</li>
-        <li>• Add 330 new customers</li>
-        <li>• Improve NRR to 105%</li>
-        <li>• Launch European market</li>
-      </ul>
-    </div>
-    
-    <div>
-      <h4 className="nx-font-semibold nx-text-gray-900 dark:nx-text-gray-100 nx-mb-3">🚀 Product</h4>
-      <ul className="nx-text-sm nx-text-gray-700 dark:nx-text-gray-300 nx-space-y-1">
-        <li>• HubSpot integration launch</li>
-        <li>• Voice AI assistant beta</li>
-        <li>• Advanced analytics for Enterprise</li>
-        <li>• Team collaboration features</li>
-      </ul>
-    </div>
-    
-    <div>
-      <h4 className="nx-font-semibold nx-text-gray-900 dark:nx-text-gray-100 nx-mb-3">🏢 Operations</h4>
-      <ul className="nx-text-sm nx-text-gray-700 dark:nx-text-gray-300 nx-space-y-1">
-        <li>• Hire 15 team members</li>
-        <li>• Frankfurt data center launch</li>
-        <li>• GDPR compliance certification</li>
-        <li>• Customer success automation</li>
-      </ul>
-    </div>
-  </div>
-</div>
+### 📈 Growth Objectives
+
+#### Revenue Targets
+- **Reach $3.2M ARR (+33%)**: Primary growth milestone for Q1 2025
+- **Add 330 new customers**: Customer acquisition acceleration
+
+#### Market Expansion
+- **Improve NRR to 105%**: Customer success and expansion focus
+- **Launch European market**: Geographic expansion initiative
+
+### 🚀 Product Development
+
+#### Integration Rollouts
+- **HubSpot integration launch**: Complete CRM ecosystem coverage
+- **Voice AI assistant beta**: Revolutionary mobile experience
+
+#### Enterprise Features
+- **Advanced analytics for Enterprise**: Data-driven insights platform
+- **Team collaboration features**: Enhanced workflow capabilities
+
+### 🏢 Operations Scaling
+
+#### Team Growth
+- **Hire 15 team members**: Strategic talent acquisition across functions
+
+#### Infrastructure Expansion
+- **Frankfurt data center launch**: European market infrastructure
+- **GDPR compliance certification**: Regulatory compliance for EU expansion
+- **Customer success automation**: Scalable support operations
 
 ---
 
