--- a/pages/north-star.mdx
+++ b/pages/north-star.mdx
@@ -79,111 +79,46 @@ xychart-beta
 
 ## 📊 Growth Trajectory
 
-<div className="nx-mt-8 nx-grid nx-grid-cols-1 lg:nx-grid-cols-2 nx-gap-8">
-  <div className="nx-bg-white dark:nx-bg-gray-800 nx-p-6 nx-rounded-xl nx-shadow-lg nx-border nx-border-gray-200 dark:nx-border-gray-700">
-    <div className="nx-flex nx-items-center nx-mb-6">
-      <div className="nx-text-2xl nx-mr-3">📈</div>
-      <h3 className="nx-text-xl nx-font-bold nx-text-gray-900 dark:nx-text-gray-100">Historical Performance</h3>
-    </div>
-    <div className="nx-space-y-4">
-      <div className="nx-flex nx-justify-between nx-items-center nx-p-4 nx-bg-gray-50 dark:nx-bg-gray-700 nx-rounded-lg">
-        <div>
-          <div className="nx-font-semibold nx-text-gray-900 dark:nx-text-gray-100">Q3 2024</div>
-          <div className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Baseline quarter</div>
-        </div>
-        <div className="nx-text-right">
-          <div className="nx-text-2xl nx-font-bold nx-text-gray-600">$1.3M</div>
-          <div className="nx-text-xs nx-text-gray-500">Starting point</div>
-        </div>
-      </div>
-      <div className="nx-flex nx-justify-between nx-items-center nx-p-4 nx-bg-green-50 dark:nx-bg-green-900/20 nx-rounded-lg nx-border nx-border-green-200 dark:nx-border-green-800">
-        <div>
-          <div className="nx-font-semibold nx-text-green-900 dark:nx-text-green-100">Q4 2024</div>
-          <div className="nx-text-sm nx-text-green-700 dark:nx-text-green-300">Record quarter</div>
-        </div>
-        <div className="nx-text-right">
-          <div className="nx-text-2xl nx-font-bold nx-text-green-600">$2.4M</div>
-          <div className="nx-text-xs nx-text-green-600 nx-flex nx-items-center">
-            <span className="nx-mr-1">↗️</span>
-            +85% growth
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+### 📈 Historical Performance
 
-  <div className="nx-bg-white dark:nx-bg-gray-800 nx-p-6 nx-rounded-xl nx-shadow-lg nx-border nx-border-gray-200 dark:nx-border-gray-700">
-    <div className="nx-flex nx-items-center nx-mb-6">
-      <div className="nx-text-2xl nx-mr-3">🎯</div>
-      <h3 className="nx-text-xl nx-font-bold nx-text-gray-900 dark:nx-text-gray-100">Future Targets</h3>
-    </div>
-    <div className="nx-space-y-4">
-      <div className="nx-flex nx-justify-between nx-items-center nx-p-4 nx-bg-blue-50 dark:nx-bg-blue-900/20 nx-rounded-lg nx-border nx-border-blue-200 dark:nx-border-blue-800">
-        <div>
-          <div className="nx-font-semibold nx-text-blue-900 dark:nx-text-blue-100">Q1 2025</div>
-          <div className="nx-text-sm nx-text-blue-700 dark:nx-text-blue-300">Next milestone</div>
-        </div>
-        <div className="nx-text-right">
-          <div className="nx-text-2xl nx-font-bold nx-text-blue-600">$3.2M</div>
-          <div className="nx-text-xs nx-text-blue-600 nx-flex nx-items-center">
-            <span className="nx-mr-1">🎯</span>
-            +33% target
-          </div>
-        </div>
-      </div>
-      <div className="nx-flex nx-justify-between nx-items-center nx-p-4 nx-bg-purple-50 dark:nx-bg-purple-900/20 nx-rounded-lg nx-border nx-border-purple-200 dark:nx-border-purple-800">
-        <div>
-          <div className="nx-font-semibold nx-text-purple-900 dark:nx-text-purple-100">End of 2025</div>
-          <div className="nx-text-sm nx-text-purple-700 dark:nx-text-purple-300">Annual target</div>
-        </div>
-        <div className="nx-text-right">
-          <div className="nx-text-2xl nx-font-bold nx-text-purple-600">$15M</div>
-          <div className="nx-text-xs nx-text-purple-600">Path to Series B</div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+#### Q3 2024 - Baseline Quarter
+- **ARR**: $1.3M
+- **Status**: Starting point for growth acceleration
+- **Context**: Foundation quarter establishing baseline metrics
+
+#### Q4 2024 - Record Quarter
+- **ARR**: $2.4M
+- **Growth**: ↗️ +85% QoQ growth
+- **Achievement**: Record-breaking performance quarter
+
+### 🎯 Future Targets
+
+#### Q1 2025 - Next Milestone
+- **Target ARR**: $3.2M
+- **Growth Goal**: 🎯 +33% target growth
+- **Timeline**: Next milestone achievement
+
+#### End of 2025 - Annual Target
+- **Target ARR**: $15M
+- **Strategic Goal**: Path to Series B funding
+- **Vision**: Major growth milestone for next funding round
 
 ## 🔍 Why ARR is Our North Star
 
-<div className="nx-mt-8 nx-grid nx-grid-cols-1 md:nx-grid-cols-3 nx-gap-6">
-  <div className="nx-bg-white dark:nx-bg-gray-800 nx-p-6 nx-rounded-xl nx-shadow-md nx-border nx-border-gray-200 dark:nx-border-gray-700">
-    <div className="nx-text-center">
-      <div className="nx-bg-blue-100 dark:nx-bg-blue-800 nx-w-12 nx-h-12 nx-rounded-full nx-flex nx-items-center nx-justify-center nx-mx-auto nx-mb-4">
-        <span className="nx-text-2xl">📊</span>
-      </div>
-      <h4 className="nx-text-lg nx-font-bold nx-text-gray-900 dark:nx-text-gray-100 nx-mb-2">Predictable Revenue</h4>
-      <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">
-        ARR provides visibility into recurring revenue streams and enables accurate forecasting for business planning.
-      </p>
-    </div>
-  </div>
+### 📊 Predictable Revenue
+- **Visibility**: ARR provides clear insight into recurring revenue streams
+- **Forecasting**: Enables accurate business planning and financial projections
+- **Stability**: Creates predictable foundation for strategic decision-making
 
-  <div className="nx-bg-white dark:nx-bg-gray-800 nx-p-6 nx-rounded-xl nx-shadow-md nx-border nx-border-gray-200 dark:nx-border-gray-700">
-    <div className="nx-text-center">
-      <div className="nx-bg-green-100 dark:nx-bg-green-800 nx-w-12 nx-h-12 nx-rounded-full nx-flex nx-items-center nx-justify-center nx-mx-auto nx-mb-4">
-        <span className="nx-text-2xl">🚀</span>
-      </div>
-      <h4 className="nx-text-lg nx-font-bold nx-text-gray-900 dark:nx-text-gray-100 nx-mb-2">Growth Indicator</h4>
-      <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">
-        Direct correlation with customer success, product-market fit, and our ability to scale sustainably.
-      </p>
-    </div>
-  </div>
+### 🚀 Growth Indicator
+- **Customer Success**: Direct correlation with customer satisfaction and retention
+- **Product-Market Fit**: Reflects our ability to deliver sustained value
+- **Scalability**: Demonstrates sustainable business model and growth potential
 
-  <div className="nx-bg-white dark:nx-bg-gray-800 nx-p-6 nx-rounded-xl nx-shadow-md nx-border nx-border-gray-200 dark:nx-border-gray-700">
-    <div className="nx-text-center">
-      <div className="nx-bg-purple-100 dark:nx-bg-purple-800 nx-w-12 nx-h-12 nx-rounded-full nx-flex nx-items-center nx-justify-center nx-mx-auto nx-mb-4">
-        <span className="nx-text-2xl">💡</span>
-      </div>
-      <h4 className="nx-text-lg nx-font-bold nx-text-gray-900 dark:nx-text-gray-100 nx-mb-2">Strategic Alignment</h4>
-      <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">
-        Unifies team focus across product, sales, and customer success towards sustainable recurring revenue growth.
-      </p>
-    </div>
-  </div>
-</div>
+### 💡 Strategic Alignment
+- **Team Unity**: Unifies focus across product, sales, and customer success teams
+- **Revenue Focus**: Drives organization toward sustainable recurring revenue growth
+- **Goal Alignment**: Creates shared metric for cross-functional collaboration
 
 ---
 
