--- a/pages/product-updates.mdx
+++ b/pages/product-updates.mdx
@@ -1,5 +1,26 @@
 # 🚀 Product Updates
 
+## 📹 Product Demo & Overview
+
+### 🎬 Latest Product Walkthrough
+
+Watch our latest product demonstration showcasing key features, recent updates, and upcoming releases.
+
+<br />
+
+<iframe
+  width="100%"
+  height="480"
+  src="https://www.loom.com/embed/c18bf8ba7bfc4f5bbc656770bbc5c8a9"
+  frameBorder="0"
+  webkitAllowFullScreen
+  mozAllowFullScreen
+  allowFullScreen
+  style={{ borderRadius: '8px' }}
+/>
+
+<br />
+
 ## Q4 2024 Major Releases
 
 <div className="nx-mt-6 nx-rounded-lg nx-bg-gradient-to-r nx-from-purple-50 nx-to-indigo-50 nx-border nx-border-purple-200 nx-p-6 dark:nx-from-purple-900/20 dark:nx-to-indigo-900/20 dark:nx-border-purple-800">
